# tiny-tracing

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cog.toml  deny.toml  pre-commit.sh  skills-lock.json
.claude/skills/release/: SKILL.md
.github/: depandabot.yml
.github/workflows/: test.yml
doc/: todo.md
examples/: basic.rs  env_filter.rs  file.rs  json.rs
src/: config.rs  errors.rs  lib.rs  time.rs
tests/: file_output.rs  logger.rs
