[package]
name = "tiny-tracing"
version = "0.2.0"
edition = "2024"
authors = ["containerscrew info@containerscrew.com"]
repository = "https://github.com/containerscrew/tiny-tracing"
documentation = "https://docs.rs/tiny-tracing"
rust-version = "1.96.1"
license-file = "LICENSE"
description = "Simple rusty log library (tracing-subscriber wrapper)"
keywords = ["logging", "tracing", "tracing-subscriber", "logger"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.45"
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
